<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="update_now">Update</string>
    <string name="app_name">North Outlet</string>
    <string name="delete_sure">sure?</string>
    <string name="toast_net_unconnected">Unable to connect to the network，Check your network
        connection or modem
    </string>
    <string name="toast_connect_server_failure">Connection server timeout，Please try again later
    </string>
    <string name="Lights_light_up_life_wisdom">Light and wisdom of life</string>
    <string name="experience_immediately">get to use</string>
    <string name="toast_alertrelogin">If unable to connect to the network,please make sure if your
        phone need to switch intranet model.
    </string>
    <string name="toast_can_not_start_lan">It can not start intranet model</string>
    <string name="toast_error_data">Data anomaly, Please relogin</string>
    <string name="toast_scan_devices">Scanning to device</string>
    <string name="toast_unstart_location_net">Lan service is not open</string>
    <string name="toast_netword_unavailable">The phone can not connect the newwork service or Wifi
    </string>
    <string name="toast_fail_scan">Scanning attempt failed:</string>
    <string name="set_password_failure">Set the password failure</string>
    <string name="error_empty_phone">Phone number is required, please re-enter the phone number
    </string>
    <string name="error_empty_password">Password can\'t be empty,please re-enter the password
    </string>
    <string name="error_agree_agreement">Once you\'ve read the agreement and checked the checkbo,
        and then log in
    </string>
    <string name="error_phone_or_password">Wrong number or password! please try agian</string>
    <string name="Please_remote_login_first">Please remote login first</string>
    <string name="error_phone_format">Phone number is not in the correct format,please confirm
        again
    </string>
    <string name="error_empty_code">Verification code is required, please re-enter code</string>
    <string name="error_empty_code_format">Varification code is incorrected,please try again
    </string>
    <string name="error_empty_sure_password">Confrim password is required, please try again</string>
    <string name="error_format_new_password">The password is not in the correct format.Password
        length should be 8-20 characters long
    </string>
    <string name="error_format_uold_password">The old password is not in the correct format.Password
        length should be 8-20 characters long
    </string>
    <string name="error_format_unew_password">The New password is not in the correct format.Password
        length should be 8-20 characters long
    </string>
    <string name="error_not_equal_password">Confirm Password is not match the password,please
        re-enter password
    </string>
    <string name="error_phone_not_register">Your number is not registered,Please log in after
        register
    </string>
    <string name="error_phone_has_register">Your number has been registered,please try to log in
    </string>
    <string name="error_old_password">The old password is incorrect, please re-enter the password
    </string>
    <string name="error_empty_old_password">The old password can not be empty.</string>
    <string name="error_empty_new_password">The new password can not be empty</string>
    <string name="error_new_equal_sure_password">New Password is not match the confirm
        password,please re-enter password
    </string>
    <string name="error_empty_name">name is required, please type new name</string>
    <string name="error_exist_name">name already exists</string>
    <string name="error_length_name">name length should be 1-4 characters,please try again.</string>
    <string name="error_not_control_devices">If it can not scan the device,Please make sure that the
        device is in the same WiFi as the mobile phone
    </string>
    <string name="fail_register">if user registration fails,please try again later</string>
    <string name="fail_isregisted">Phone number has been registered, please login or recover your
        password
    </string>
    <string name="fail_update_pw">If user change password fails,please try again later</string>
    <string name="succ_login">Successful user login</string>
    <string name="succ_register">Registration Successful</string>
    <string name="succ_update_pw">Change password successful</string>
    <string name="succ_add_phone">Add number successful</string>
    <string name="tips">Note</string>
    <string name="home_delete_tips">You can only perform this operation on a device that is cut
        off.
    </string>
    <string name="devices_scan">Scanning</string>
    <string name="confirm_logout">Log out?</string>
    <string name="sure">Confirm</string>
    <string name="sure_open">Timing open</string>
    <string name="sure_close">Timing closure</string>
    <string name="if_add_to_model">Do you want to add to your users\' profile?</string>
    <string name="create_new_model">Set up new profile</string>
    <string name="hint_create_new_model">Input title</string>
    <string name="set_main_phone">To make sure that you set current mobile number is primary
        number?Setup will exit the interface.
    </string>
    <string name="delete_phone_item">Do you want to delete phone number?</string>
    <string name="has_a_main_phone">It is current primary phone number</string>
    <string name="main_phone_can_not_delete">It is current primary phone number, please delete after
        change primary phone number
    </string>
    <string name="make_all_light_open">Do you want to open all device?</string>
    <string name="make_all_light_close">Do you want to close all device?</string>
    <string name="get_light_priority">Do you want to get priority of all light bulb control?
    </string>
    <string name="out_light_priority">Do you want to cancel priority of all light bulb control?
    </string>
    <string name="recovery_and_delete_data">Fatory settings will delete all data</string>
    <string name="delete_current_screen">Do you want to delete the current profile?</string>
    <string name="delete_current_device">Do yuu want to delete the device?</string>
    <string name="devices_scanning">Scanning</string>
    <string name="update_light_name">Modify the name</string>
    <string name="dela_switch">Delay Switch</string>
    <string name="dela_switch_title">After electrify time delay shut down</string>
    <string name="three_minutes">Three Minutes</string>
    <string name="five_minutes">Five Minutes</string>
    <string name="ten_minutes">Ten Minutes</string>
    <string name="please_input_deivce_name">Please enter the name</string>
    <string name="select_time">Please select time</string>
    <string name="set_timer_open_succ">It will be turned on after %1$s</string>
    <string name="set_timer_close_succ">It will be turned off after %1$s</string>
    <string name="hint_phone">Mobile number(Country code isn\'t requested)</string>
    <string name="hint_password">Password</string>
    <string name="agree_user_agreement">Use Agreement</string>
    <string name="automatic_login">Login automatically</string>
    <string name="forget_password">Forget password?</string>
    <string name="phone_verify">Mobile identification</string>
    <string name="register_agree_agreement">You agree to be bound by the terms of our Privacy
        Policy
    </string>
    <string name="get_code">Test Get Code</string>
    <string name="send_msg">Send verification code</string>
    <string name="re_send_msg">Resend verification code</string>
    <string name="hint_input_code">Enter verification code</string>
    <string name="you_phone_is">Your mobile number
        <Data>-<![CDATA[<font color="#FFA01E"><b>%1$s</b></font>]]></Data>
    </string>
    <string name="code_has_send_phone">Verification already send to you-
        <Data>-<![CDATA[<font color="#FFA01E"><b>%1$s</b></font>]]></Data>
    </string>
    <string name="seting_password">Set password</string>
    <string name="please_set_you_password">Please set password</string>
    <string name="hint_input_password">Please enter Password</string>
    <string name="password_format">Password length should be 8-20 characters long</string>
    <string name="input_password_again">Please enter again</string>
    <string name="hint_make_sure_password">Please confirm password</string>
    <string name="finish">Finish</string>
    <string name="user_name_password_mistake_please_login_again">The user name or password mistake,
        please login again
    </string>
    <string name="send_verification_code">Send verification code</string>
    <string name="verification_code_error_please_resend">Verification code error, please resend
    </string>
    <string name="send_data_over_time">To send data over time</string>
    <string name="authorization_number_removed_successfully">Authorization number was removed
        successfully!
    </string>
    <string name="change_the_number_success">Change the number success!</string>
    <string name="control_devices">Bridge</string>
    <string name="wifi_light">WiFi lamp</string>
    <string name="wifi_outlet">WiFi socket</string>
    <string name="wifi_power_strip">Wifi power strip</string>
    <string name="composite_device">Intelligent hue</string>
    <string name="wifi_bridge">Wireless bridge</string>
    <string name="tele_devices">Infrared device</string>
    <string name="scan_devices">Scanning</string>
    <string name="index">Home Page</string>
    <string name="main_sreen">Main Scene</string>
    <string name="create_new_sreen">Creat a new Scene</string>
    <string name="light">Lighting</string>
    <string name="light_switch">Switch</string>
    <string name="outlet">Socket</string>
    <string name="curtains">Curtains</string>
    <string name="stb">STB</string>
    <string name="tv_controller">TV controller</string>
    <string name="all_open_or_close">Linkage mode</string>
    <string name="alert_information">Message</string>
    <string name="priority">Network</string>
    <string name="priority_manager">Access control</string>
    <string name="choose_bg">Select viewport image</string>
    <string name="voice_control">Voice control</string>
    <string name="language_choose">Language</string>
    <string name="net_choose">Network selection</string>
    <string name="change_password">Modify Password</string>
    <string name="recovery">Factory reset</string>
    <string name="version">Version display</string>
    <string name="main_phone">The current primary Mobile</string>
    <string name="auxiliary_permissions">Auxiliary permissions</string>
    <string name="unknown">Unknown</string>
    <string name="delete_phone">Delete</string>
    <string name="add_phone">Add Mobile number</string>
    <string name="my_qr_code">My QR</string>
    <string name="scan_qr_code">Scan the qr code</string>
    <string name="update_password">Modify password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="make_sure_password">Confirm new password</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_device">Add Devices</string>
    <string name="Add_Group">Add Group</string>
    <string name="find_device">Find Devices</string>
    <string name="device_name">Device Name</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="enter_password">Enter Password</string>
    <string name="device_type">Device Type</string>
    <string name="questions_get_a_hold_of_us_at">Questions? Get a hold of us at:</string>
    <string name="weliveupnorth_com">weliveupnorth.com</string>
    <string name="support_weliveupnorth_com">Support@weliveupnorth.com</string>
</resources>