<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/lay_input_field"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_above="@+id/text_input_layout_password"
            >

            <EditText
                android:id="@+id/ed_wifi_setup_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_ssid"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerInParent="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_dark"
            >

            <EditText
                android:id="@+id/ed_wifi_setup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:singleLine="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_below="@+id/lay_input_field"
            android:text="@string/find_device"
            android:textColor="@color/white"
            android:background="@color/primary_dark"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_one_key_setup"
    />
</RelativeLayout>