<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context="com.chug.north_outlet.activity.AddScanDeviceActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
        >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:id="@+id/rl_add_scan_back"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_back_arrow"
                    />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_device"
                    android:textColor="@color/white"
                    android:id="@+id/tv_scan_device_title"
                    android:textSize="16sp"/>
                <RelativeLayout android:id="@+id/rl_device_save"
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:paddingRight="3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                    />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_add_device"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:background="@drawable/radius_button_medium"
            android:src="@drawable/add_device_default_small" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_add_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
        >

            <EditText
                android:id="@+id/ed_add_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/device_name"
                android:singleLine="true"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_add_device_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
        >

            <EditText
                android:id="@+id/ed_add_device_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:hint="@string/device_type"
                android:singleLine="true"
            />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:id="@+id/btn_delete_device"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:textSize="17sp"
        android:background="@color/playback_btn_p"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/red_btn_bg_pressed_color"/>
</RelativeLayout>