<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_north"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:scaleType="center"
        android:src="@drawable/ic_about_img"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="We're a Minneapolis based company making some cool stuff.We want to make your life easier and a little more fun."/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Learn more about our products at:"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_north_link"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/primary_dark"
                android:text="@string/weliveupnorth_com"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions_get_a_hold_of_us_at"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email_us"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/primary_dark"
                android:text="@string/support_weliveupnorth_com"/>
        </LinearLayout>
    </ScrollView>
    <WebView android:layout_width="match_parent"
             android:layout_height="match_parent"
            android:id="@+id/webview"/>
</LinearLayout>